# DobbyTest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/dobbytest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniTest.c  JniTest.h  native-lib.cpp
app/src/main/cpp/tools/: Logcat.h
app/src/main/java/com/example/dobbytest/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dobbytest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
